# muphasa

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
bench/: baseline.json  bench_spatiotemporal.py
docs/source/: building.rst  conf.py  detailed.rst  index.rst  zbib.rst
mph/: CMakeLists.txt  IO.h  main.cpp
python/mph.py/: setup.py
python/mph.py/mph/: mph.py  pyMPH.pxd
src/cpp/: CMakeLists.txt  IO.cpp  IO.h  bindings.cpp  bindings.h  examples.h  grade.cpp  grade.h  groebner.cpp  groebner.h  landscapes.cpp  landscapes.h  main.cpp  main.h  matrix.cpp  matrix.h  presentation.cpp  presentation.h  rips.cpp  rips.h  signatureColumn.h  spatiotemporal.cpp  spatiotemporal.h  utils.cpp  utils.h
src/python/mph/: __init__.py  _mph.py  pyMPH.pxd  pyMPH.pyx
src/python/mph/examples/: __init__.py
test/: _complex_fixtures.py  conftest.py  test_spatiotemporal_landscapes.py  update_complex_snapshots.py
test/snapshots/: brownian_30x10.json  drifting_grid_49x10.json  rotating_ring_36x10.json  swarm_disperse_26x9.json  two_clusters_merging_32x9.json
