[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "mph"
dynamic = ["version"]
description = "A Multiparameter Persistent Homology Library for Python"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
    { name = "Oliver Gäfvert", email = "oliver.gafvert@maths.ox.ac.uk" }
]

dependencies = [
    "numpy"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

keywords = [
    "persistent homology", "topology data analysis",
    "algebraic topology", "unsupervised learning"
]

[project.optional-dependencies]
testing = ["pytest"]
docs = ["sktda_docs_config"]


# Use src-layout: look for packages under src/python
[tool.setuptools.package-dir]
"" = "src/python"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.dynamic]

version = { attr = "mph._version.__version__" }
